THRIFT-3354 Fix word-extraction substr bug in initialism code Client: Go Author: Prashant Varanasi <prashant@uber.com>

This closes #625